Made the webUI better

--- a/web_static/dev/index.html
+++ b/web_static/dev/index.html
@@ -8,7 +8,7 @@
   <% htmlWebpackPlugin.files.js.forEach(jsFile => { %>
     <link rel="preload" href="<%= jsFile %>" as="script"> <!-- preload the scripts -->
   <% }) %>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500,700" rel="stylesheet">
 </head>
 <body>
   <%if (!htmlWebpackPlugin.options.production) { %>
